# reliabilityloop

./: .gitignore  CHANGELOG.md  GITHUB_RELEASE_v0.2.0-alpha.md  LICENSE  README.md  RELEASE.md  pyproject.toml
eval/: README.md  RELIABILITY_V1_SPEC.md  contract_bench.py  contract_prompts.jsonl  humaneval_runner.py  launch_humaneval.py  prompts.jsonl  reliability_v1_60.jsonl
eval/contract_runs/20260206-170015/: report.md  samples.jsonl  summary.json
eval/contract_runs/20260206-185738/: report.md  samples.jsonl  summary.json
eval/contract_runs/20260206-192021/: report.md  samples.jsonl  summary.json
eval/contract_runs/llama32-50/: report.md  samples.jsonl  summary.json
eval/runs/20260205-050836/: meta.baseline_fast.jsonl  samples.baseline_fast.jsonl
eval/runs/20260205-162415/: meta.baseline_fast.jsonl  meta.escalate.jsonl  meta.repair.jsonl  metrics.baseline_fast.json  metrics.escalate.json  metrics.repair.json  report.md  samples.escalate.normalized.jsonl  samples.escalate.normalized.jsonl_results.jsonl  samples.repair.jsonl  samples.repair.normalized.jsonl_results.jsonl  summary.json
eval/runs/20260206-015112/: meta.baseline_fast.jsonl  meta.escalate.jsonl  meta.repair.jsonl  metrics.baseline_fast.json  (+9 more)
examples/: leaderboard_60_baseline.md  summary_60_baseline.json
paper/: README.md  contract_first_paper.tex  references.bib  references_unified.bib  testgate_paper.tex
src/autoquality/: __main__.py  bench.py  cli.py  contracts.py  reliability.py  repair.py  router.py  uncertainty.py
tests/: test_contracts.py  test_reliability.py  test_router.py
(+73 files in other folders)
