[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliabilityloop"
version = "0.2.0"
description = "Verifier-driven framework for local LLM reliability and adaptive inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rana Muhammad Usman", email = "usmanashrafrana@gmail.com" }]
dependencies = []

[project.optional-dependencies]
llamacpp = ["llama-cpp-python"]
dev = ["pytest"]

[project.scripts]
reliabilityloop = "autoquality.cli:main"
testgate = "autoquality.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
